<resources>
    <string name="app_name">findyourpet</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="text_account">帳號</string>
    <string name="text_password">密碼</string>
    <string name="remember_password">記住密碼</string>
    <string name="action_login">登入</string>
    <string name="forget_password">忘記密碼</string>
    <string name="action_register">註冊</string>
    <string name="phone_number">手機號碼</string>
    <string name="verification_code">驗證碼</string>
    <string name="get_verification_code">獲取驗證碼</string>
    <string name="register_password">輸入密碼</string>
    <string name="register_confirm">確認註冊</string>
</resources>