<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/textView_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/editText_phone_number"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        android:text="@string/action_register"
        android:textSize="@dimen/loginText"/>
    <EditText
        android:id="@+id/editText_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:hint="@string/phone_number"
        android:textSize="@dimen/loginText"
        android:gravity="center"
        android:background="@drawable/shape_login_text"
        app:layout_constraintTop_toBottomOf="@+id/textView_register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        android:layout_marginLeft="@dimen/loginText"/>
    <EditText
        android:id="@+id/editText_verification_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/verification_code"
        android:textSize="@dimen/loginText"
        android:gravity="center"
        android:background="@drawable/shape_login_text"
        app:layout_constraintTop_toBottomOf="@+id/editText_phone_number"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        android:layout_marginTop="@dimen/loginText"
        android:layout_marginRight="160dp"
        android:layout_marginLeft="@dimen/loginText"/>
    <Button
        android:id="@+id/button_get_verification_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/editText_phone_number"
        app:layout_constraintRight_toRightOf="@+id/editText_phone_number"
        app:layout_constraintLeft_toRightOf="@+id/editText_verification_code"
        android:layout_marginTop="16dp"
        android:text="@string/get_verification_code"
        android:background="@drawable/shape_login_button"
        android:textSize="@dimen/loginText"/>
    <EditText
        android:id="@+id/editText_register_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/register_password"
        android:textSize="@dimen/loginText"
        android:gravity="center"
        android:background="@drawable/shape_login_text"
        app:layout_constraintTop_toBottomOf="@+id/editText_verification_code"
        android:layout_marginTop="@dimen/loginText"
        android:layout_marginLeft="@dimen/loginText"
        android:layout_marginRight="@dimen/loginText"/>
    <Button
        android:id="@+id/button_register_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_confirm"
        android:textSize="@dimen/loginText"
        android:background="@drawable/shape_login_button"
        app:layout_constraintTop_toBottomOf="@+id/editText_register_password"
        android:layout_marginTop="@dimen/loginText"
        android:layout_marginLeft="@dimen/loginText"
        android:layout_marginRight="@dimen/loginText"/>


</androidx.constraintlayout.widget.ConstraintLayout>