<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/editText_login_account"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        android:text="Login"
        android:textSize="30dp"/>
    <EditText
        android:id="@+id/editText_login_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/test"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        android:textSize="@dimen/loginText"
        android:gravity="center"
        android:background="@drawable/shape_login_text"
        android:layout_marginLeft="@dimen/loginText"
        android:layout_marginRight="@dimen/loginText"
        android:hint="@string/text_account"/>
    <EditText
        android:id="@+id/editText_login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/editText_login_account"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        android:hint="@string/text_password"
        android:textSize="@dimen/loginText"
        android:inputType="textPassword"
        android:gravity="center"
        android:background="@drawable/shape_login_text"
        android:layout_marginLeft="@dimen/loginText"
        android:layout_marginRight="@dimen/loginText"
        android:layout_marginTop="@dimen/loginText"/>
    <CheckBox
        android:id="@+id/checkbox_remember_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/editText_login_password"
        app:layout_constraintLeft_toLeftOf="@+id/editText_login_password"
        android:layout_marginTop="10dp"
        android:text="@string/remember_password"
        android:textSize="@dimen/remember_password"/>
    <TextView
        android:id="@+id/textView_forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/editText_login_password"
        app:layout_constraintRight_toRightOf="@+id/editText_login_password"
        android:layout_marginTop="12dp"
        android:text="@string/forget_password"
        android:textSize="@dimen/remember_password"
        android:onClick="onTextViewForgetPassword"
        android:clickable="true"/>
    <Button
        android:id="@+id/button_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_remember_password"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        android:text="@string/action_login"
        android:textSize="@dimen/loginText"
        android:background="@drawable/shape_login_button"
        android:layout_marginLeft="@dimen/loginText"
        android:layout_marginRight="@dimen/loginText"
        android:layout_marginTop="20dp"/>
    <Button
        android:id="@+id/button_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/button_login"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        android:text="@string/action_register"
        android:textSize="@dimen/loginText"
        android:background="@drawable/shape_login_button"
        android:layout_marginLeft="@dimen/loginText"
        android:layout_marginRight="@dimen/loginText"
        android:layout_marginTop="10dp"/>



</androidx.constraintlayout.widget.ConstraintLayout>